--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="hero-content">
                     <h1 data-animation="flipInX" data-delay="0.2" data-color="#fff">
                         Absensi Online - Foto Selfie & Auto Detect Lokasi</h1>
-                    <p style = "margin-top: 50px;" data-animation="fadeInDown" class="mt-4 flexself">
+                    <p id = "checkk" style = "margin-top: 50px;" data-animation="fadeInDown" class="mt-4 flexself">
                       <span class = "check"> &#10003; </span> &nbsp;Powered by Tim Alpha Cinta Kasih
                     </p>
                 </div>
@@ -102,38 +102,38 @@
 
 <br> <br> Solusi lengkap untuk manajemen kehadiran, mulai dari merekam, mengolah jadwal, pengelompokkan jenis SDM, hingga pelaporan kehadiran dengan penggunaan sistem absensi online berbasis foto selfie dan deteksi lokasi otomatis.</p>
             <div class="row mt-lg-5 mt-4 text-center">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6" id = "newbox">
                     <div class="grids5-info">
-                        <a href="#service" class="d-block zoom"><img src="assets/images/s1.jpg" alt=""
+                        <a class="d-block zoom"><img src="assets/images/s1.jpg" alt=""
                                 class="img-fluid service-image" /></a>
                         <div class="blog-info">
-                            <a href="#service" class="title">Berbasis cloud dan multi platform</a>
+                            <a class="title">Berbasis cloud dan multi platform</a>
                             <p class="text-para">
                               Anda tidak membutuhkan investasi server fisik karena aplikasi ini menggunakan teknologi yang multi platform. Memudahkan akses sistem dari berbagai macam jenis perangkat. Dengan penggunaan cloud server memudahkan Anda mendapat informasi dan data kehadiran realtime yang dapat di akses setiap saat.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-md-0 mt-5">
+                <div class="col-lg-4 col-md-6 mt-lg-0 mt-5" id = "newbox">
                     <div class="grids5-info">
-                        <a href="#service" class="d-block zoom"><img src="assets/images/s2.jpg" alt=""
+                        <a class="d-block zoom"><img src="assets/images/s3.jpg" alt=""
                                 class="img-fluid service-image" /></a>
                         <div class="blog-info">
-                            <a href="#service" class="title">Absen lebih aman tanpa fingerprint</a>
+                            <a class="title">Kelola shift kerja saat new normal</a>
                             <p class="text-para">
-                              Aplikasi absensi mobile Android yang berbasis GPS dan disertai fitur selfie Talenta memberikan akses pemantauan keterlambatan, jam istirahat dan ketidakhadiran selama penerapan jam kerja parsial. Tinggalkan mesin fingerprint dan beralih ke sistem absensi yang aman dan lebih cepat.
+                              Proses panjang dan manual tidak lagi diperlukan dengan manajemen shift karyawan yang langsung dari Talenta. Pengelolaan jam kerja lebih cepat dan praktis selama new normal bahkan untuk perusahaan multi-cabang. Manajemen jadwal kerja dan sistem otomatis akan merekan setiap kehadiran atau ketidakhadiran karyawan.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-lg-0 mt-5">
+                <div class="col-lg-4 col-md-6 mt-md-0 mt-5" id = "newbox">
                     <div class="grids5-info">
-                        <a href="#service" class="d-block zoom"><img src="assets/images/s3.jpg" alt=""
+                        <a  class="d-block zoom"><img src="assets/images/s2.jpg" alt=""
                                 class="img-fluid service-image" /></a>
                         <div class="blog-info">
-                            <a href="#service" class="title">Kelola shift kerja saat new normal</a>
+                            <a class="title">Absen lebih aman tanpa fingerprint</a>
                             <p class="text-para">
-                              Proses panjang dan manual tidak lagi diperlukan dengan manajemen shift karyawan yang langsung dari Talenta. Pengelolaan jam kerja lebih cepat dan praktis selama new normal bahkan untuk perusahaan multi-cabang. Manajemen jadwal kerja dan sistem otomatis akan merekan setiap kehadiran atau ketidakhadiran karyawan.
+                              Aplikasi absensi mobile Android yang berbasis GPS dan disertai fitur selfie Talenta memberikan akses pemantauan keterlambatan, jam istirahat dan ketidakhadiran selama penerapan jam kerja parsial. Tinggalkan mesin fingerprint dan beralih ke sistem absensi yang aman dan lebih cepat.
                             </p>
                         </div>
                     </div>
@@ -150,28 +150,28 @@
       <p class = "kiribawah">Kami selalu meningkatkan kualitas sistem dan memberikan fitur terbaik yang bisa dengan mudah Anda gunakan.</p>
       <div class="square">
         <div class="box">
-          Berbasis Android & Web
+          <p class = "fa fa-android" id = "fa"></p>Berbasis Android & Web
         </div>
         <div class="box">
-          Atur Jadwal Kerja & Shift
+          <p class = "fa fa-plus" id = "fa"></p>Atur Jadwal Kerja & Shift
         </div>
         <div class="box">
-          Fleksibel Dashboard
+          <p class = "fa fa-code-fork" id = "fa"></p>Fleksibel Dashboard
         </div>
         <div class="box">
-          Cepat & Mudah Digunakan
+          <p class = "fa fa-bolt" id = "fa"></p>Cepat & Mudah Digunakan
         </div>
         <div class="box">
-          Tanpa Fingerprint
+          <p class = "fa fa-angle-double-right" id = "fa"></p>Tanpa Fingerprint
         </div>
         <div class="box">
-          Kelola Jenis Pengguna
+          <p class = "fa fa-user" id = "fa"></p>Kelola Jenis Pengguna
         </div>
         <div class="box">
-          Absen Foto Selfie & GPS
+          <p class = "fa fa-map-marker" id = "fa"></p>Absen Foto Selfie & GPS
         </div>
         <div class="box">
-          Rekap Laporan Excel & PDF
+          <p class = "fa fa-line-chart" id = "fa"></p>Rekap Laporan Excel & PDF
         </div>
     </div>
   </div>
@@ -204,6 +204,13 @@
                                     <div class="peopl align-self">
                                         <h3>David Garcia Saragih</h3>
                                         <p class="indentity">Pelajar</p>
+                                        <div class="star">
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star-half-o"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -222,6 +229,13 @@
                                     <div class="peopl align-self">
                                         <h3>Vincent Sutanto</h3>
                                         <p class="indentity">Pelajar</p>
+                                        <div class="star">
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -240,6 +254,13 @@
                                     <div class="peopl align-self">
                                         <h3>Jonathan Benaya Suwilis</h3>
                                         <p class="indentity">Pelajar</p>
+                                        <div class="star">
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star checked"></span>
+                                          <span class="fa fa-star"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -256,11 +277,11 @@
 <!-- footer -->
 <footer class="w3l-footer-29-main" id = "kontak">
     <div class="footer-29 py-5">
-      <div class="container py-md-4">
+      <div class="container py-md-3">
 
         <div class="row footer-top-29">
 
-          <div class="col-lg-4 col-md-6 footer-list-29 footer-1">
+          <div class="col-lg-3 col-md-6 footer-list-29 footer-1">
             <div class="footer-logo mb-4">
               <a class="navbar-brand" href="index.html">
                 Tentang Kami</a>
@@ -274,14 +295,14 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-list-29 footer-1 pr-lg-5 mt-md-0 mt-5">
+          <div class="col-lg-4 col-md-6 footer-list-29 footer-1 pr-lg-5 mt-md-0 mt-5" id = "kontak">
             <h6 class="footer-title-29">Kontak</h6>
-            <p class="mb-2">Alamat : <?php ?></p>
-            <p class="mb-2">Nomor Telepon : <a href="tel:+1(21) 234 4567"><?php ?></a></p>
-            <p class="mb-2">Email : <a href="mailto:info@example.com"><?php ?></a></p>
+            <p class="mb-2">Alamat : Cinta Kasih Tzu Chi</p>
+            <p class="mb-2">Nomor Telepon : <a href="https://wa.me/+6281232130900?text=Hi%20David%20" target = "_blank">0812-3213-0900</a></p>
+            <p class="mb-2">Email : <a href="mailto:info@davidgarciasaragih6.com" target = "_blank">davidgarciasaragih6@gmail.com</a></p>
           </div>
 
-          <div class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-lg-0 mt-5">
+          <div class="col-lg-3 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-lg-0 mt-5" id = "dukungan">
             <ul>
               <h6 class="footer-title-29">Dukungan Pengguna</h6>
               <p>Jangan ragu menghubungi kami melalui whatsapp, halaman kontak, atau email.</p>
@@ -291,8 +312,8 @@
           <div class="col-lg-2 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-lg-0 mt-5">
             <ul>
               <h6 class="footer-title-29">Tindakan</h6>
-              <li><a href=""> Masuk</a></li>
-              <li><a href="">Daftar</a></li>
+              <li><a href="http://demo.alpa-development.my.id/login.php" target = "_blank"> Masuk</a></li>
+              <li><a href="http://demo.alpa-development.my.id/registrasi.php" target = "_blank">Daftar</a></li>
             </ul>
           </div>
 
@@ -445,12 +466,6 @@
     $(".navbar-toggler").on("click", function () {
       $("header").toggleClass("active");
     });
-    $(".fa-bars").on("click", function () {
-      $("header").toggleClass("active");
-    });
-      $(".icon-expand").on("click", function () {
-        $("header").toggleClass("active");
-      });
     $(document).on("ready", function () {
       if ($(window).width() > 991) {
         $("header").removeClass("active");
